--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
                   <td>OSEI NANA YAW KUFFUOR </td>
               </tr>
               <tr>
-                  <td>FYNN KUUKUA</td>
-                  <td>AMA OKYEREWA OKRAKU MANTEY</td>
+                  <td>FYNN KUUKUA, AMA OKYEREWA OKRAKU MANTEY</td>
+                  <td>?</td>
               </tr>
               <tr>
                   <td>IHENETU LUMINA CHIAMAKA</td>
-                  <td>NO PAIR LEFT</td>
+                  <td>?</td>
               </tr>
             </table>
             
