--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
         <h2>We Are The Best✨</h2>
         
         <div >
-            <p>I got my inspiration from my brother's github repository and his website</p>
+            <p>I got my inspiration from my brother's github repository, his website and W3 schools</p>
             <a href="https://github.com/uxp123/">Brother's Github</a>
 
         </div>
         <div>
             <a href="https://papsy.herokuapp.com/">Brother's Personal Site</a>
+        </div>
+        <div>
+            <a href="www.w3schools.com">W3 Schools</a>
+        
         </div>
 
         <style>
