--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="https://papsy.herokuapp.com/">Brother's Personal Site</a>
         </div>
         <div>
-            <a href="www.w3schools.com">W3 Schools</a>
+            <a href="https://www.w3schools.com">W3 Schools</a>
         
         </div>
 
