--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
     <title>Grade 8 Website</title>
     <header>
         <h1>Welcome To Grade 8 🔥</h1>
+        <div>
+            <h2>–By Kuukua Fynn✨❤️–</h2>
+            </div>
     </header>
     <body>
         <h2>We Are The Best✨</h2>
