--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <div >
             <p>I got my inspiration from my brother's github repository, his website and W3 schools</p>
-            <a href="https://github.com/uxp123/">Brother's Github</a>
+            <a href="https://github.com/uxp123/uxp123.github.io">Brother's Github</a>
 
         </div>
         <div>
