--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <hmtl>
-    <title>Grade 8 Website</title>
+    <title>Grade 8 Website By Kuukua</title>
     <header>
         <h1>Welcome To Grade 8 🔥</h1>
         <div>
