--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
                   <td>?</td>
               </tr>
             </table>
+                
+           <img src="aves.jpg" alt="Aves">
             
     </body>
 </hmtl>
